# entari-plugin-llm

./: README.md  entari.yml  example_tools.py  pyproject.toml  zssm.py
src/entari_plugin_llm/: README.md  __init__.py  _jsondata.py  _types.py  config.py  event.py  json_output.py  manager.py  model.py  response.py  service.py  sessions.py  utils.py
src/entari_plugin_llm/events/: tools.py
src/entari_plugin_llm/handlers/: chat.py  check.py  command.py  manager.py  utils.py
src/entari_plugin_llm/tools/: __init__.py  bridge.py  event.py
src/entari_plugin_llm/tools/builtins/: image_vision.py  webpage_processor.py
