[project]
name = "entari-plugin-llm"
version = "0.1.0"
description = "An Entari Plugin for LLM Chat with Function Call"
authors = [
    {"name" = "RF-Tar-Railt", "email" = "rf_tar_railt@qq.com"},
    {"name" = "KomoriDev", "email" = "mute231010@gmail.com"}
]
dependencies = [
    "arclet.entari[yaml,cron,reload,dotenv]>=0.17.1",
    "docstring-parser>=0.17.0",
    "litellm>=1.84.0",
    "entari-plugin-database>=0.2.4",
]
requires-python = ">=3.10"
readme = "README.md"
license = {"text" = "MIT"}

[project.optional-dependencies]
browser = [
    "entari-plugin-browser>=0.5.4",
]
google = [
    "litellm[google]>=1.81.13",
]

[dependency-groups]
dev = [
    "entari-plugin-server>=0.6.2",
    "satori-python-adapter-onebot11>=0.4.2",
    "ruff>=0.14.10",
    "satori-python-adapter-console>=0.5.1",
    "agno>=2.5.8",
    "ddgs>=9.11.2",
    "satori-python-adapter-milky>=0.3.1",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q", "I"]
ignore = ["C901", "T201", "E731", "E402", "PYI055"]

[tool.pyright]
pythonVersion = "3.10"
pythonPlatform = "All"
typeCheckingMode = "basic"


[tool.pdm]
distribution = true

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
